crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__arrays__array_declaration_1.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/arrays.rs
assertion_line: 6
expression: "goto_definition(r#\"\n%! main.sp\nvoid foo() {\n    const bar = 1;\n    int baz[10] = { bar, ... };\n                     |\n                     ^\n    }\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 2,
        "character": 20
      },
      "end": {
        "line": 2,
        "character": 23
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 10
      },
      "end": {
        "line": 1,
        "character": 17
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 10
      },
      "end": {
        "line": 1,
        "character": 13
      }
    }
  }
]
